--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
  </nav>
  <div  class="headings container ">
  <h3 class="fancy"><b>ADDING JOY TO YOUR JOURNEY</b></h3>
- <h1>FOR THE <b style="color: white;">WONDERLUST</b> IN YOU </h1>
- <h3>DISCOVER YOUR NEW TRIP</h3>
+ <h1 class="firstHeading">FOR THE <b style="color: white;">WONDERLUST</b> IN YOU </h1>
+ <h3 class="secondHeading">DISCOVER YOUR NEW TRIP</h3>
 </div>
 </div>
 <!-- search bar -->
@@ -47,23 +47,111 @@
   <div class="wrapper">
 	<input type="text" class="input" 
 	placeholder="Search your destination here">
-	<div class="searchbtn btn btn-block btn-danger"><i class="fas fa-search"></i></div>
+	<div class="searchbtn btn btn-block btn-danger"><i style="color: white;" class="fas fa-search"></i></div>
 </div>
 </div>
 
 <div class="popular container">
 <h1 class="mt-5">Popular places</h1>
 
+<div class="gallery mt-4">
 <div class="place-img">
-<img src="images/Rectangle 6.png" alt="">
-<img src="images/Rectangle 7.png" alt="">
-<img src="images/Rectangle 8.png" alt="">
+
+</div>
+<div class="place-img">
+</div>
+<div class="place-img">
+
+</div>
+</div>
+
+<div id="moreItem" class="btn btn-danger btn-lg mt-5">More Places</div>
+
+
+<!-- services -->
+<div class="service">
+<h1 class="mt-5">We provide worlds best destination for you</h1>
+
+<div class=" mt-5">
+
+  <div class="row">
+<div class="col-lg-4">
+  <i class="fas fa-globe fa-7x"></i>
+  <h3 class="mt-2">Reliable tours</h3>
+</div>
+<div class="col-lg-4">
+  <i class="fas fa-plane fa-7x"></i>
+  <h3 class="mt-2">Air ticketing </h3>
+</div>
+<div class="col-lg-4">
+  <i class="fas fa-hotel fa-7x"></i>
+  <h3 class="mt-2">Best Lodge/Hotel</h3>
+</div>
+</div>
+  </div>
+
+  
+</div>
+
+<!-- testimonials -->
+<div class="testimonials">
+<h1 class="mt-5">Testimonials</h1>
+  <div id="carouselExampleControls" class="carousel slide mt-4" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="images/Ellipse 1.png" alt=""> <span><i>Name Here</i></span>
+        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
+      </div>
+      <div class="carousel-item">
+        <img src="images/Ellipse 2.png" alt=""> <span><i>Name Here</i></span>
+        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
+      </div>
+      <div class="carousel-item">
+        <img src="images/Ellipse 3.png" alt=""> <span><i>Name Here</i></span>
+        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span><i style="color: black;" class="fa fa-angle-left fa-2x" aria-hidden="true"></i></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span><i style="color: black;" class="fa fa-angle-right fa-2x" aria-hidden="true"></i></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+</div>
+<!-- footer -->
+<div  class="footerBig">
+  <div class="row">
+    <div class="col-lg-6">
+      <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+<hr>
+      <div class="icons"><i class="fab fa-2x mr-3 fa-facebook-square"></i> <i style="color: white;" class="fas fa-2x mr-3  fa-envelope"></i> <i class="fab fa-2x mr-3  fa-twitter-square"></i></div>
+    </div>
+    <div class="col-lg-6">
+
+      <h3 style="color: black;" class="mt-2">Get in touch</h3>
+
+      <div  center;" class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="text" name="" id="">
+        <button class="mt-2 btn btn-primary ">Subscribe</button>
+      </div>
+
+
+    </div>
+  </div>
 
 
 
 </div>
+<footer style="text-align: center;">Designed and Developed by Chandan Rajbongshi and Ankush Kumar Thakur</footer>
 
-</div>
+
+
+
 
 
 
