--- a/index.html
+++ b/index.html
@@ -70,20 +70,20 @@
 
 <!-- services -->
 <div class="service">
-<h1 class="mt-5">We provide worlds best destination for you</h1>
+<h1 class="mt-5 tagline">We provide worlds best destination for you</h1>
 
 <div class=" mt-5">
 
   <div class="row">
-<div class="col-lg-4">
+<div class="col-lg-4 mt-3">
   <i class="fas fa-globe fa-7x"></i>
   <h3 class="mt-2">Reliable tours</h3>
 </div>
-<div class="col-lg-4">
+<div class="col-lg-4 mt-3">
   <i class="fas fa-plane fa-7x"></i>
   <h3 class="mt-2">Air ticketing </h3>
 </div>
-<div class="col-lg-4">
+<div class="col-lg-4 mt-3">
   <i class="fas fa-hotel fa-7x"></i>
   <h3 class="mt-2">Best Lodge/Hotel</h3>
 </div>
@@ -92,23 +92,24 @@
 
   
 </div>
+</div>
 
 <!-- testimonials -->
 <div class="testimonials">
-<h1 class="mt-5">Testimonials</h1>
-  <div id="carouselExampleControls" class="carousel slide mt-4" data-ride="carousel">
+<h1 class="mt-5 test">Testimonials</h1>
+  <div id="carouselExampleControls" class="carousel  slide mt-4" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="images/Ellipse 1.png" alt=""> <span><i>Name Here</i></span>
-        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
+        <h4  class="testText mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
       </div>
       <div class="carousel-item">
         <img src="images/Ellipse 2.png" alt=""> <span><i>Name Here</i></span>
-        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
+        <h4 class="testText mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
       </div>
       <div class="carousel-item">
         <img src="images/Ellipse 3.png" alt=""> <span><i>Name Here</i></span>
-        <h4 class="mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>      </div>
+        <h4 class="testText mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>      </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span><i style="color: black;" class="fa fa-angle-left fa-2x" aria-hidden="true"></i></span>
@@ -130,7 +131,7 @@
 <hr>
       <div class="icons"><i class="fab fa-2x mr-3 fa-facebook-square"></i> <i style="color: white;" class="fas fa-2x mr-3  fa-envelope"></i> <i class="fab fa-2x mr-3  fa-twitter-square"></i></div>
     </div>
-    <div class="col-lg-6">
+    <div class="col-lg-6 mt-4">
 
       <h3 style="color: black;" class="mt-2">Get in touch</h3>
 
