--- a/index.html
+++ b/index.html
@@ -56,16 +56,17 @@
 
 <div class="gallery mt-4">
 <div class="place-img">
-
+<div class="names"><h3>Place name</h3></div>
 </div>
 <div class="place-img">
+  <div class="names"><h3>Place name</h3></div>
 </div>
 <div class="place-img">
-
+  <div class="names"><h3>Place name</h3></div>
 </div>
 </div>
 
-<div id="moreItem" class="btn btn-danger btn-lg mt-5">More Places</div>
+<div id="moreItem" class="btn btn-danger btn-lg mt-5">More Places <i class="fas fa-angle-double-right"></i></div>
 
 
 <!-- services -->
