--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <div class="testimonials">
 <h1 class="mt-5 test">Testimonials</h1>
   <div id="carouselExampleControls" class="carousel  slide mt-4" data-ride="carousel">
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="text-align: center;">
       <div class="carousel-item active">
         <img src="images/Ellipse 1.png" alt=""> <span><i>Name Here</i></span>
         <h4  class="testText mt-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</h4>
@@ -120,6 +120,7 @@
       <span><i style="color: black;" class="fa fa-angle-right fa-2x" aria-hidden="true"></i></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
   </div>
 </div>
 
