--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
 
 </div>
-<footer style="text-align: center;">Designed and Developed by Chandan Rajbongshi and Ankush Kumar Thakur</footer>
+<footer style="text-align: center;">Designed and Developed by <i>Chandan Rajbongshi</i> and <i>Ankush Kumar Thakur</i></footer>
 
 
 
